tests/NormalTests/paczka1/small_fuzzy/53919916.err
Error in line 1: jAPa A354 18,3
Error in line 5: sNubs8Z A188 40,7
Error in line 2: jAPa A188 75,1
Error in line 10: jAPa S458 44,5
